--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 *{
     box-sizing: border-box;
+    text-decoration: none;
 }
 html{
     scroll-behavior: smooth;
@@ -7,6 +8,7 @@ html{
 body{
     font-family: 'roboto', sans-serif;
     margin: 0;
+    
 }
 h1{ font-size: 3.5em;}
 h2{ font-size: 2.7em;}
@@ -19,7 +21,7 @@ li{ font-size: 1.40em;}
     margin: auto;
 }
 header{
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
 }
 header .logo{
     margin: 0;
@@ -33,17 +35,12 @@ header .container{
     flex-direction: column;
     align-items: center;
 }
-header nav{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    padding-bottom: 25px;
-}
+
 header a{
     padding: 5px 12px;
     text-decoration: none;
     font-weight: bold;
-    color: black;
+    color: rgb(243, 237, 237);
 }
 header a:hover{
     color: rgb(8, 29, 218);
@@ -57,7 +54,7 @@ header a:hover{
 .container h2:hover{
     color: rgb(8, 29, 218);
 }
-#portada{
+#home{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -68,41 +65,71 @@ header a:hover{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
+    
 }
-#portada h1{
+#home h1{
     color: white;
 }
-#info    {
+#quienes_somos{
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     flex-direction: column;
-    background-color: rgb(30,30,30);
+    
+    background-color: rgb(92, 84, 84);
     height: 80vh;
 }
 
-#info .container{
+#quienes_somos .container{
+    display: flex;
+    flex-direction: column;
     text-align: center;
-    padding: 200px 300px;
+    padding: 2rem 0;
     color: white
 }
 
-footer{
-    background-color: rgb(230,230,230);
-}
-
-footer p{
-    margin: 0;
-    padding: 12px;
-    color: rgb(100,100,100);
-}
-
-footer .container{
-    height: 150px;
+#clases {
+    
     display: flex;
+    align-items: center;
     justify-content: center;
-    align-items: flex-end;
+    text-align: center;
+    flex-direction: column;
+    height: 80vh;
+    background-color: rgb(133, 170, 74);
+  }
+
+#clases .container {
+    
+    display: flex;
+   flex-direction: column;
+    text-align: center;
+    padding: 2rem 0;
+    text-decoration: none;
+    color: rgb(2, 0, 0)
+  }
+tr:nth-of-type(1) > th{
+    background-color:rgb(10, 114, 79);
+}
+#contactos{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    height: 80vh;
+    
+}
+.footer{
+    width: 100%;
+    text-align: center;
+    background: #000000;
+    padding: 20px 0;
+}
+
+.footer a{
+    color: #fff;
 }
 
 @media (min-width: 850px){
@@ -114,11 +141,5 @@ footer .container{
     header .container{
         flex-direction: row;
         justify-content: space-between;
-    }
-
-    header nav{
-        flex-direction: row;
-        padding-bottom: 0;
-        padding-right: 20px;
     }
 }
